# basic-rust-lib-template

./: Cargo.toml  LICENSE  README.md  cargo-generate.toml
.github/: CONTRIBUTING.md  dependabot.yml  semantic.yml
.github/actions/changelog/: action.yml
.github/workflows/: ci.yml  test.yml
src/: lib.rs  main.rs
