[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "{{rust_version}}"
authors = [
  "{{authors}}",
]
{% if license != "skip" %}
license = "{{license}}"
{% endif %}
readme = "README.md"
{% if description == "<<fill later>>" %}
#description = "TODO"
{% else %}
description = "{{ description }}"
{% endif %}
repository = "https://github.com/{{github_name}}/{{crate_name}}-rs"
keywords = []
categories = []
include = [
  "src/",
  "Cargo.toml",
]
{% if proc_macro and within_cargo_project or workspace == false %}
[lib]
proc-macro = true
{% endif %}
[features]

[dependencies]
{% if proc_macro and workspace and within_cargo_project %}
proc-macro2 = {workspace = true}
syn = {workspace = true}
quote = {workspace = true}
{% else if proc_macro and workspace == false %}
proc-macro2 = "1"
syn = "2"
quote = "1"
{% endif %}
{% if proc_macro and workspace and within_cargo_project == false %}
[workspace.dependencies]
proc-macro2 = "1"
syn = "2"
quote = "1"
{% endif %}
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "doc_cfg",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
