[package]
name = "XXXCRATE_NAMEXXX"
version = "0.0.0"
edition = "2021"
rust-version = "1.75.0"
authors = [
  "Alorel <amolc@pm.me>",
]
license = "Apache-2.0"
readme = "README.md"
description = "XXXCRATE_DESCXXX"
repository = "https://github.com/Alorel/XXXGH_REPOXXX"
keywords = []
categories = []
include = [
  "src/",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "doc_cfg",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
